<resources>
    <string name="app_name">Android Masterclass</string>
    <string name="search_concept_by_name">Search Concept By Name</string>
    <string name="coroutines">Coroutines</string>
    <string name="coroutine_jobs">Coroutine Jobs</string>
    <string name="async">Async</string>
    <string name="await">await</string>
    <string name="suspend_functions">Suspend Functions</string>
    <string name="coroutine_scope">Coroutine Scope</string>
    <string name="async_await">Async Await</string>
    <string name="runWithAndBlocking">Run With And Blocking</string>
    <string name="lifecycle_scope">Lifecycle Scope</string>
    <string name="one_to_one">One to One</string>
    <string name="one_to_many">One to Many</string>
    <string name="many_to_many">Many to Many</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="room_db">Room Db</string>
    <string name="enter_user_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_city">Enter City</string>
    <string name="save">Save</string>
    <string name="input_student">Input Student</string>
    <string name="input_course">Input Course</string>
    <string name="s_c_cross">Input Cross</string>
    <string name="display_course">Display Course</string>
    <string name="diplay_student">Display Student</string>
    <string name="cross_display">Display Cross</string>
    <string name="insert">Insert</string>
    <string name="hint_course">Enter Course Name</string>
    <string name="hint_student">Enter Student Name</string>
    <string name="enter_student_id">Enter Student Id</string>
    <string name="enter_course_id">Enter Course Id</string>
    <string name="search_course">Search Course</string>
    <string name="search_student">Search Student</string>
    <string name="enter_course_or_student_id">Enter Course or Student Id</string>
    <string name="fetch_next_page">Fetch Next Page</string>
    <string name="retrofit">Retrofit</string>
    <string name="update">Update</string>
    <string name="display">Display</string>
    <string name="firestore">Firestore</string>
    <string name="firebase">Firebase Realtime</string>
</resources>