<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="0dp"
        android:layout_margin="30dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_user_name"
        />


    <EditText
        android:id="@+id/etUserEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etUserName"
        app:layout_constraintStart_toStartOf="@id/etUserName"
        app:layout_constraintEnd_toEndOf="@id/etUserName"
        android:hint="@string/enter_email"
        />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etUserEmail"
        app:layout_constraintStart_toStartOf="@id/etUserEmail"
        app:layout_constraintEnd_toEndOf="@id/etUserEmail"
        android:hint="@string/enter_city"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_color"
        android:text="@string/save"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/etCity"
        app:layout_constraintStart_toStartOf="@id/etCity"
        app:layout_constraintTop_toBottomOf="@id/etCity" />
</androidx.constraintlayout.widget.ConstraintLayout>